--- a/src/app/components/constructor/constructor.component.html
+++ b/src/app/components/constructor/constructor.component.html
@@ -1,3 +1,16 @@
-<app-header></app-header>
-<app-sidenavbar></app-sidenavbar>
-<app-content></app-content>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 color-1">
+            <app-header></app-header>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 col-md-4 col-lg-3 color-2">
+            <app-sidenavbar></app-sidenavbar>
+        </div>
+        <div class="col-8 col-md-8 col-lg-9 color-3">
+            <app-content></app-content>
+        </div>
+    </div>
+</div>
+
